datasets/bench4bl/spring-security/queries/long/3056.txt
Due to more strict javadoc checks in Java 8 one currently cannot build spring-security with javadoc via a plain ./gradlew install as a fallback one has to skip javadoc generation ./gradlew install -x javadoc.
Since the JavaDoc errors are all within BCrypt.java it should be very easy to fix.
With those javadoc tags fixed one can build the spring-security with Java 8 without any problems.






D:\dev\repos\spring\spring-security\crypto\src\main\java\org\springframework\security\crypto\bcrypt\BCrypt.java:34: error: self-closing element not allowed




 * String pw_hash = BCrypt.hashpw(plain_password, BCrypt.gensalt()); <br />




                                                                     ^




D:\dev\repos\spring\spring-security\crypto\src\main\java\org\springframework\security\crypto\bcrypt\BCrypt.java:41: error: self-closing element not allowed




 * if (BCrypt.checkpw(candidate_password, stored_hash))<br />




                                                       ^




D:\dev\repos\spring\spring-security\crypto\src\main\java\org\springframework\security\crypto\bcrypt\BCrypt.java:42: error: self-closing element not allowed




 * &nbsp;&nbsp;&nbsp;&nbsp;System.out.println("It matches");<br />




                                                            ^




D:\dev\repos\spring\spring-security\crypto\src\main\java\org\springframework\security\crypto\bcrypt\BCrypt.java:43: error: self-closing element not allowed




 * else<br />




       ^




D:\dev\repos\spring\spring-security\crypto\src\main\java\org\springframework\security\crypto\bcrypt\BCrypt.java:44: error: self-closing element not allowed




 * &nbsp;&nbsp;&nbsp;&nbsp;System.out.println("It does not match");<br />




                                                                   ^




D:\dev\repos\spring\spring-security\crypto\src\main\java\org\springframework\security\crypto\bcrypt\BCrypt.java:51: error: self-closing element not allowed




 * String strong_salt = BCrypt.gensalt(10)<br />




                                          ^




D:\dev\repos\spring\spring-security\crypto\src\main\java\org\springframework\security\crypto\bcrypt\BCrypt.java:52: error: self-closing element not allowed




 * String stronger_salt = BCrypt.gensalt(12)<br />





